--- a/app/src/main/res/drawable/edit_text_border.xml
+++ b/app/src/main/res/drawable/edit_text_border.xml
@@ -3,8 +3,7 @@
     <solid android:color="#FFFFFF" />
     <stroke
         android:width="1dp"
-        android:color="#CCCCCC" />
+        android:color="@color/blue_primary" />
     <corners
-        android:bottomRightRadius="8dp"
-        android:topRightRadius="8dp" />
+        android:radius="15dp" />
 </shape>
