--- a/app/src/main/res/layout/fragment_kelola_kumbung.xml
+++ b/app/src/main/res/layout/fragment_kelola_kumbung.xml
@@ -14,9 +14,10 @@
         android:background="#FFFFFF"
         android:gravity="center"
         android:padding="16dp"
-        android:text="kumbung"
+        android:text="Kelola Kumbung"
         android:textColor="#000000"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Divider line -->
@@ -31,7 +32,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/inputSection"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/divider">
 
@@ -45,16 +46,17 @@
             android:inputType="number"
             android:paddingStart="20dp"
             android:paddingEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/btnCheck"
             app:layout_constraintEnd_toStartOf="@id/btnCheck"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/btnCheck" />
 
         <Button
             android:id="@+id/btnCheck"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#0066FF"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/blue_primary"
             android:text="CEK"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
@@ -67,12 +69,13 @@
         android:id="@+id/tvDataHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#0066FF"
+        android:background="@color/blue_primary"
         android:gravity="center"
         android:padding="8dp"
         android:text="Daftar Kumbung"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/inputSection" />
 
     <!-- TextView when no data is available -->
@@ -87,16 +90,16 @@
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/tvDataHeader" />
 
-    <!-- ListView for data -->
-    <ListView
-        android:id="@+id/listView"
+    <!-- RecyclerView for data -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvKumbung"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="5dp"
+        android:layout_marginEnd="10dp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
