--- a/app/src/main/res/layout/fragment_kelola_petugas.xml
+++ b/app/src/main/res/layout/fragment_kelola_petugas.xml
@@ -80,12 +80,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
         android:clipToPadding="false"
         android:paddingBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cvStaffListHeader"
-        tools:listitem="@layout/item_petugas"
-        tools:itemCount="1" />
+        tools:itemCount="1"
+        tools:listitem="@layout/item_petugas" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
