--- a/app/src/main/res/layout/item_petugas.xml
+++ b/app/src/main/res/layout/item_petugas.xml
@@ -32,8 +32,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_person"
-                app:tint="#FFFFFF" />
+                app:srcCompat="@drawable/ic_person"/>
 
             <!-- Staff Info -->
             <LinearLayout
