update fungsi btn kelola petugas

--- a/app/src/main/res/layout/activity_tambah_petugas.xml
+++ b/app/src/main/res/layout/activity_tambah_petugas.xml
@@ -63,70 +63,78 @@
             <!-- Nama Field -->
             <TextView
                 android:id="@+id/tvNamaLabel"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/blue_gradient_background"
+                android:layout_marginEnd="20dp"
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="8dp"
-                android:text="Nama"
-                android:textColor="@color/white"
+                android:text="Nama Petugas"
+                android:textAlignment="textStart"
+                android:textColor="@color/blue_primary"
                 android:textSize="14sp"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/etNama"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
                 android:background="@drawable/edit_text_border"
                 android:hint="Masukkan nama petugas"
                 android:inputType="textPersonName"
                 android:padding="12dp"
                 android:textColor="#000000"
                 android:textSize="14sp"
-                app:layout_constraintTop_toBottomOf="@id/tvNamaLabel"
-                tools:layout_editor_absoluteX="16dp" />
+                app:layout_constraintEnd_toEndOf="@+id/tvNamaLabel"
+                app:layout_constraintStart_toStartOf="@+id/tvNamaLabel"
+                app:layout_constraintTop_toBottomOf="@id/tvNamaLabel" />
 
             <!-- Email Field -->
             <TextView
                 android:id="@+id/tvEmailLabel"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:background="@drawable/blue_gradient_background"
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="8dp"
-                android:text="Email"
-                android:textColor="@color/white"
+                android:text="Email Petugas"
+                android:textAlignment="textStart"
+                android:textColor="@color/blue_primary"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/etNama"
+                app:layout_constraintStart_toStartOf="@+id/etNama"
                 app:layout_constraintTop_toBottomOf="@id/etNama" />
 
             <EditText
                 android:id="@+id/etEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
                 android:background="@drawable/edit_text_border"
                 android:hint="Masukkan email petugas"
                 android:inputType="textEmailAddress"
                 android:padding="12dp"
                 android:textColor="#000000"
                 android:textSize="14sp"
-                app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"
-                tools:layout_editor_absoluteX="16dp" />
+                app:layout_constraintEnd_toEndOf="@+id/etNama"
+                app:layout_constraintStart_toStartOf="@+id/tvEmailLabel"
+                app:layout_constraintTop_toBottomOf="@id/tvEmailLabel" />
 
             <!-- Pilih Penugasan Kumbung -->
             <!-- Pilih Penugasan Kumbung -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvPenugasan"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="0dp"
+                app:layout_constraintEnd_toEndOf="@+id/etEmail"
+                app:layout_constraintStart_toStartOf="@+id/etEmail"
                 app:layout_constraintTop_toBottomOf="@id/etEmail">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -161,11 +169,13 @@
 
             <!-- Button Container -->
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:orientation="horizontal"
                 android:weightSum="2"
+                app:layout_constraintEnd_toEndOf="@+id/cvPenugasan"
+                app:layout_constraintStart_toStartOf="@+id/cvPenugasan"
                 app:layout_constraintTop_toBottomOf="@id/cvPenugasan">
 
                 <Button
