--- a/app/src/main/res/layout/activity_tambah_petugas.xml
+++ b/app/src/main/res/layout/activity_tambah_petugas.xml
@@ -28,6 +28,7 @@
             app:tint="@android:color/black" />
 
         <TextView
+            android:id="@+id/tvFormPetugas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tambah Petugas"
@@ -186,7 +187,7 @@
                     android:layout_weight="1"
                     android:backgroundTint="#007BFF"
                     android:padding="12dp"
-                    android:text="TAMBAH"
+                    android:text="Simpan"
                     android:textColor="@android:color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -199,7 +200,7 @@
                     android:layout_weight="1"
                     android:backgroundTint="#E74C3C"
                     android:padding="12dp"
-                    android:text="BATAL"
+                    android:text="Batal"
                     android:textColor="@android:color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
