--- a/app/src/main/res/layout/fragment_kelola_petugas.xml
+++ b/app/src/main/res/layout/fragment_kelola_petugas.xml
@@ -92,4 +92,16 @@
         tools:itemCount="1"
         tools:listitem="@layout/item_petugas" />
 
+    <TextView
+        android:id="@+id/tvEmptyState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Belum ada data petugas"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
