--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#000000</color>
     <color name="gray">#757575</color>
     <color name="divider">#BDBDBD</color>
+    <color name="temperature_color">#FF5722</color>
+    <color name="humidity_color">#2196F3</color>
 </resources>
